# rmq-message-pruner

./: README.md  pyproject.toml
src/rmq_message_pruner/: cli.py
tests/: test_core.py
