[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rmq-message-pruner"
version = "0.1.0"
description = "Filter and optionally republish RabbitMQ messages by content"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Lars de Ridder", email = "lars@xithing.io" }]
dependencies = ["pika>=1.3"]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
rmq-message-pruner = "rmq_message_pruner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
